--- a/index.html
+++ b/index.html
@@ -23,73 +23,73 @@
             </tr>
             <tr class="lundi">
                 <td>lundi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td><a href="">lien vers la checkbox</a> </td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td><a href="checkbox/lundi.html">lien vers la checkbox</a></td>
                 
             </tr>
             <tr class="mardi">
                 <td>mardi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
             <tr class="mercredi">
                 <td>mercredi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
             <tr class="jeudi">
                 <td>jeudi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
             <tr class="vendredi">
                 <td>vendredi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
             <tr class="samedi">
                 <td>samedi</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
             <tr class="dimanche">
                 <td>dimanche</td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
-                <td> <input type="text" id="name" name="setpneuf"></td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
+                <td> a faire</td>
                 <td><a href="">lien vers la checkbox</a> </td>
             </tr>
     
